--- a/html/produtos.html
+++ b/html/produtos.html
@@ -12,7 +12,27 @@
   <header>
     <nav class="nav">
         <div class="logo">
-            <h1>logo</h1>
+            <img src="../img/logojapuiba-removebg-preview.png" alt="">
+        </div>
+        <div id="pesquisa">
+          <div class="input-group">
+            <div class="input-icon">
+              <i class="bi bi-search"></i>
+            </div>
+            <input type="text" id="search" class="input-field" placeholder="Pesquisar">
+          </div>
+          <ul class="items">
+            <li class="item">
+              <div class="item-imagem">
+                <img src="./img/produto1.png" alt="Produto">
+              </div>
+              <div class="item-content">
+                <h2 class="item-title">Produto 1</h2>
+                <p class="item-subtitle">Subtítulo</p>
+                <p class="item-description">Descrição do produto</p>
+              </div>
+            </li>
+          </ul>
         </div>
         <ul class="nav-list">
             <li><a href="../index.html">Inicio</a></li>
@@ -28,7 +48,38 @@
  <div class="container">
   <div class="card">
    <ul id="card-lista" class="card-lista">
-
+      <li class="card-item">
+        <a class="card-link" href="">
+          <img class="card-imagem" src="../img/produtos10-removebg-preview.png" alt="${produto.titulo}">
+          <p class="item">item</p>
+          <h2 class="card-titulo">titulo</h2>
+          <button class="card-button"><i class="bi bi-arrow-right"></i></button>
+        </a>
+      </li>
+      <li class="card-item">
+        <a class="card-link" href="">
+          <img class="card-imagem" src="../img/produtos10-removebg-preview.png" alt="${produto.titulo}">
+          <p class="item">item</p>
+          <h2 class="card-titulo">titulo</h2>
+          <button class="card-button"><i class="bi bi-arrow-right"></i></button>
+        </a>
+      </li>
+      <li class="card-item">
+        <a class="card-link" href="">
+          <img class="card-imagem" src="../img/produtos10-removebg-preview.png" alt="${produto.titulo}">
+          <p class="item">item</p>
+          <h2 class="card-titulo">titulo</h2>
+          <button class="card-button"><i class="bi bi-arrow-right"></i></button>
+        </a>
+      </li>
+      <li class="card-item">
+        <a class="card-link" href="">
+          <img class="card-imagem" src="../img/produtos10-removebg-preview.png" alt="${produto.titulo}">
+          <p class="item">item</p>
+          <h2 class="card-titulo">titulo</h2>
+          <button class="card-button"><i class="bi bi-arrow-right"></i></button>
+        </a>
+      </li>    
    </ul>
   </div>
  </div>
@@ -59,6 +110,7 @@
     </button>
   </footer>
      <script src="../script.js"></script>
+     <script src="../index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
