--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
    <ul id="card-lista" class="card-lista">
       <li class="card-item">
         <a class="card-link" href="">
-          <img class="card-imagem" src="../img/produtos10-removebg-preview.png" alt="${produto.titulo}">
+          <img class="card-imagem" src="./img/produtos16-removebg-preview.png" alt="${produto.titulo}">
           <p class="item">item</p>
           <h2 class="card-titulo">titulo</h2>
           <button class="card-button"><i class="bi bi-arrow-right"></i></button>
@@ -119,7 +119,7 @@
       </li>
       <li class="card-item">
         <a class="card-link" href="">
-          <img class="card-imagem" src="../img/produtos10-removebg-preview.png" alt="${produto.titulo}">
+          <img class="card-imagem" src="./img/produtos16-removebg-preview.png" alt="${produto.titulo}">
           <p class="item">item</p>
           <h2 class="card-titulo">titulo</h2>
           <button class="card-button"><i class="bi bi-arrow-right"></i></button>
@@ -127,7 +127,7 @@
       </li>
       <li class="card-item">
         <a class="card-link" href="">
-          <img class="card-imagem" src="../img/produtos10-removebg-preview.png" alt="${produto.titulo}">
+          <img class="card-imagem" src="./img/produtos16-removebg-preview.png" alt="${produto.titulo}">
           <p class="item">item</p>
           <h2 class="card-titulo">titulo</h2>
           <button class="card-button"><i class="bi bi-arrow-right"></i></button>
@@ -135,7 +135,7 @@
       </li>
       <li class="card-item">
         <a class="card-link" href="">
-          <img class="card-imagem" src="../img/produtos10-removebg-preview.png" alt="${produto.titulo}">
+          <img class="card-imagem" src="./img/produtos16-removebg-preview.png" alt="${produto.titulo}">
           <p class="item">item</p>
           <h2 class="card-titulo">titulo</h2>
           <button class="card-button"><i class="bi bi-arrow-right"></i></button>
