--- a/index.html
+++ b/index.html
@@ -105,45 +105,7 @@
   </div>
   </div>
 </section>
-   
-<div class="total">
-  <div class="card">
-   <ul id="card-lista" class="card-lista">
-      <li class="card-item">
-        <a class="card-link" href="">
-          <img class="card-imagem" src="img/produtos13-removebg-preview.png" alt="">
-          <p class="item">item</p>
-          <h2 class="card-titulo">titulo</h2>
-          <button class="card-button"><i class="bi bi-arrow-right"></i></button>
-        </a>
-      </li>
-      <li class="card-item">
-        <a class="card-link" href="">
-          <img class="card-imagem" src="img/produtos13-removebg-preview.png" alt="">
-          <p class="item">item</p>
-          <h2 class="card-titulo">titulo</h2>
-          <button class="card-button"><i class="bi bi-arrow-right"></i></button>
-        </a>
-      </li>
-      <li class="card-item">
-        <a class="card-link" href="">
-          <img class="card-imagem" src="img/produtos13-removebg-preview.png" alt="">
-          <p class="item">item</p>
-          <h2 class="card-titulo">titulo</h2>
-          <button class="card-button"><i class="bi bi-arrow-right"></i></button>
-        </a>
-      </li>
-      <li class="card-item">
-        <a class="card-link" href="">
-          <img class="card-imagem" src="img/produtos13-removebg-preview.png" alt="">
-          <p class="item">item</p>
-          <h2 class="card-titulo">titulo</h2>
-          <button class="card-button"><i class="bi bi-arrow-right"></i></button>
-        </a>
-      </li>    
-   </ul>
-  </div>
- </div>
+ 
 
   <div class="pagina">
    <div id="paginacao" class="pagination-buttons"></div>
@@ -165,12 +127,12 @@
       <p >Presenteia as pessoas que voce ama</p>
     </div>
     <div class="grid-item">
-      <img class="grid2" src="./img/almofadas.jpg" alt="Cadernos">
-      <p >Almofadas</p>
+      <img class="grid2" src="./img/mochila.jpeg" alt="Cadernos">
+      <p>Guarde suas ideias</p>
     </div>
     <div class="grid-item">
       <img class="grid2" src="./img/marcador.jpg" alt="Cadernos">
-      <p >Marcadores</p>
+      <p >Marca as suas metas</p>
     </div>
 </section>
 
