--- a/html/sobre.html
+++ b/html/sobre.html
@@ -11,35 +11,35 @@
 <body>
   <header id="home" class="azul">
     <nav class="nav">
-        <div class="logo">
-            <img src="../img/logojapuiba-removebg-preview.png" alt="">
-        </div>
-        <div id="pesquisa">
-          <div class="input-group">
-            <div class="input-icon">
-              <i class="bi bi-search"></i>
-            </div>
-            <input type="text" id="search" class="input-field" placeholder="Pesquisar">
+      <div class="logo">
+        <img src="../img/logojapuiba-removebg-preview.png" alt="Logo">
+      </div>
+      <div id="pesquisa">
+        <div class="input-group">
+          <div class="input-icon">
+            <i class="bi bi-search"></i>
           </div>
-          <ul class="items">
-            <li class="item">
-              <div class="item-imagem">
-                <img src="./img/produto1.png" alt="Produto">
-              </div>
-              <div class="item-content">
-                <h2 class="item-title">Produto 1</h2>
-                <p class="item-subtitle">Subtítulo</p>
-                <p class="item-description">Descrição do produto</p>
-              </div>
-            </li>
-          </ul>
+          <input type="text" id="search" class="input-field" placeholder="Pesquisar">
         </div>
-        <ul class="nav-list">
-            <li><a href="../index.html">Inicio</a></li>
-            <li><a href="#">Sobre</a></li>
-            <li><a href="./contato.html">Contato</a></li>
-            <li><a href="./produtos.html">Produtos</a></li>
+        <ul class="items">
+          <li class="item">
+            <div class="item-imagem">
+              <img src="./img/produto1.png" alt="Produto">
+            </div>
+            <div class="item-content">
+              <h2 class="item-title">Produto 1</h2>
+              <p class="item-subtitle">Subtítulo</p>
+              <p class="item-description">Descrição do produto</p>
+            </div>
+          </li>
         </ul>
+      </div>
+      <ul class="nav-list">
+        <li><a class="link" href="../index.html">Inicio</a></li>
+        <li><a class="link" href="./sobre.html">Sobre</a></li>
+        <li><a class="link" href="./contato.html">Contato</a></li>
+        <li><a class="link" href="./produtos.html">Produtos</a></li>
+      </ul>
     </nav>
 
     <header class="texto">
@@ -112,7 +112,6 @@
       <a href="#home"> <img src="../img/chevron-up.svg" alt=""></a>
     </button>
   </footer>
-  <script src="../index.js"></script>
+<script src="../js/inicio.js"></script>
 </body>
-
 </html>
