--- a/html/contato.html
+++ b/html/contato.html
@@ -19,7 +19,7 @@
               <div class="input-icon">
                 <i class="bi bi-search"></i>
               </div>
-              <input type="text" id="search" class="input-field" placeholder="Pesquisar..">
+              <input type="text" id="search" class="input-field" placeholder="Pesquisar">
             </div>
             <ul class="items">
               <li class="item">
@@ -35,23 +35,24 @@
             </ul>
           </div>
           <ul class="nav-list">
-            <li><a href="../index.html">Inicio</a></li>
-            <li><a href="./sobre.html">Sobre</a></li>
-            <li><a href="./contato.html">Contato</a></li>
-            <li><a href="./produtos.html">Produtos</a></li>
+            <li><a class="link" href="../index.html">Inicio</a></li>
+            <li><a class="link" href="./sobre.html">Sobre</a></li>
+            <li><a class="link" href="./contato.html">Contato</a></li>
+            <li><a class="link" href="./produtos.html">Produtos</a></li>
           </ul>
         </nav>
       </header>
     <div class="todo-contato">
         <section class="formulario">
-        <form action="">
+        <form id="form-contato" action="">
             <h1>Contato</h1>
             <p>Estamos aqui para ajudar!</p>
-            <input type="text" name="" id="" placeholder="Nome:" required>
-            <input type="email" name="" id="" placeholder="Email:" required>
-            <textarea name="" id="" placeholder="Mensagem:" required></textarea>
+            <input  type="text" name="nome" id="nome" placeholder="Nome:" required>
+            <input  type="email" name="email" id="email" placeholder="Email:" required>
+            <textarea name="mensagem" id="mensagem" placeholder="Mensagem:"rows='5'  required></textarea>
              <div class="enviar"><input class="ksks" type="submit" value="enviar"></div>
         </form>
+        <p id="resposta-formulario"></p>
         <div class="informacoes">
             <h2>Informações</h2>
             <div class="info">
@@ -89,8 +90,8 @@
     </div>
     
     
-
-<script src="../index.js"></script>
+<script src="../js/inicio.js"></script>
+<script src="../js/contato.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
