--- a/html/detalhes.html
+++ b/html/detalhes.html
@@ -5,11 +5,74 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Detalhes do Produto</title>
   <link rel="stylesheet" href="../css/detalhes.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css">
 </head>
-<body>
+<body id="home">
+  <header>
+    <nav class="nav">
+      <div class="logo">
+        <img src="../img/logojapuiba-removebg-preview.png" alt="Logo">
+      </div>
+      <div id="pesquisa">
+        <div class="input-group">
+          <div class="input-icon">
+            <i class="bi bi-search"></i>
+          </div>
+          <input type="text" id="search" class="input-field" placeholder="Pesquisar">
+        </div>
+        <ul class="items">
+          <li class="item">
+            <div class="item-imagem">
+              <img src="./img/produto1.png" alt="Produto">
+            </div>
+            <div class="item-content">
+              <a href="detalhes.html?id=${produto.id}">
+              <h2 class="item-title">Produto 1</h2>
+              <p class="item-subtitle">Subtítulo</p>
+              <p class="item-description">Descrição do produto</p>
+            </a>
+            </div>
+          </li>
+        </ul>
+      </div>
+      <ul class="nav-list">
+        <li><a href="../index.html">Inicio</a></li>
+        <li><a href="sobre.html">Sobre</a></li>
+        <li><a href="contato.html">Contato</a></li>
+        <li><a href="produtos.html">Produtos</a></li>
+      </ul>
+    </nav>
+  </header>
   <div id="detalhes-container"></div>
 
-
+  <div class="container">
+     <ul id="card-lista" class="card-lista">
+     </ul>
+    </div>
+    <footer>
+      <div>
+        <h1>Mapa do site</h1>
+        <a href="#home">Inicio</a>
+        <a href="./html/sobre.html">Sobre</a>
+        <a href="./html/produtos.html">Produtos</a>
+        <a href="./html/contato.html">Contato</a>
+      </div>
+      <img src="../img/Captura de Tela (145).png" alt="Mapa">
+      <div>
+        <h1>Marcas</h1>
+        <p>Tilibra</p>
+        <p>Foroni</p>
+        <p>Faber Castell</p>
+        <p>Jandaia</p>
+      </div>
+      <button>
+        <a href="#home"><img src="../img/chevron-up.svg" alt="Seta para cima"></a>
+      </button>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="../informacoes.js"></script>
+  <script src="../js/inicio.js"></script>
 </body>
 </html>
