--- a/html/sobre.html
+++ b/html/sobre.html
@@ -112,6 +112,6 @@
       <a href="#home"> <img src="../img/chevron-up.svg" alt=""></a>
     </button>
   </footer>
-<script src="../js/inicio.js"></script>
+  <script src="../js/contato.js"></script>
 </body>
 </html>
