--- a/html/detalhes.html
+++ b/html/detalhes.html
@@ -74,5 +74,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="../informacoes.js"></script>
   <script src="../js/inicio.js"></script>
+  <script src="../js/contato.js"></script>
 </body>
 </html>
