--- a/html/inicio.html
+++ b/html/inicio.html
@@ -153,7 +153,7 @@
         <br> ou seja, aquelas que usam a mão esquerda como dominante para realizar <br> atividades cotidianas.
        Como o mundo é predominantemente projetado para destros,  <br>  esses produtos ajudam a facilitar 
          a vida dos canhotos, proporcionando conforto, <br> eficiência e segurança.</p>
-         <a href="">Maped</a>
+         <a type="button" class="btn btn-primary">Maped</a>
     </div>
     <img id="imagem0" src="../img/porenquanto.webp" alt="">
   </section>
@@ -166,7 +166,7 @@
          naturais, diminuir o lixo nos aterros e combater a poluição. <br>
           Esses produtos são feitos de materiais que têm potencial de ser reaproveitados <br>
             após o descarte, se corretamente separados e enviados para reciclagem.</p>
-            <a href="">Veja</a>
+            <button type="button" class="btn btn-primary">Veja mais</button>
     </div>
     <img id="imagem1" src="../img/pexels-karolina-grabowska-7692890 (1).jpg" alt="">
   </section>
@@ -194,5 +194,6 @@
   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
      <script src="../js/inicio.js"></script>
+     <script src="../js/contato.js"></script>
 </body>
 </html>
