--- a/html/inicio.html
+++ b/html/inicio.html
@@ -56,13 +56,13 @@
   <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="../img/testea.PNG" class="d-block w-100" alt="...">
+        <img src="../img/1.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="../img/banner.PNG" class="d-block w-100" alt="...">
+        <img src="../img/2.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="../img/banner2.PNG" class="d-block w-100" alt="...">
+        <img src="../img/3.jpg" class="d-block w-100" alt="...">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
