--- a/html/inicio.html
+++ b/html/inicio.html
@@ -56,13 +56,13 @@
   <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="../img/1.jpg" class="d-block w-100" alt="...">
+        <img src="../img/1.png" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="../img/2.jpg" class="d-block w-100" alt="...">
+        <img src="../img/2.png" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="../img/3.jpg" class="d-block w-100" alt="...">
+        <img src="../img/3.png" class="d-block w-100" alt="...">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
@@ -125,24 +125,20 @@
   <section class="grid">
     <div class="grid-item">
       <img class="grid1" src="../img/caderno.webp" alt="2025">
-      <p >Usar a criatividade é genial</p>
     </div>
     <div class="grid-item">
       <img class="grid2" src="../img/canetas.jpg" alt="Stabilo">
-      <p >Escreva a sua historia</p>
     </div>
     <div class="grid-item">
       <img class="grid2" src="../img/presente.jpg" alt="Stabilo">
-      <p >Presenteia as pessoas que voce ama</p>
     </div>
     <div class="grid-item">
       <img class="grid2" src="../img/mochila.jpeg" alt="Cadernos">
-      <p>Guarde suas ideias</p>
     </div>
     <div class="grid-item">
       <img class="grid2" src="../img/marcador.jpg" alt="Cadernos">
-      <p >Marca as suas metas</p>
     </div>
+
 </section>
 <div class="pagina">
   
@@ -153,7 +149,7 @@
         <br> ou seja, aquelas que usam a mão esquerda como dominante para realizar <br> atividades cotidianas.
        Como o mundo é predominantemente projetado para destros,  <br>  esses produtos ajudam a facilitar 
          a vida dos canhotos, proporcionando conforto, <br> eficiência e segurança.</p>
-         <a type="button" class="btn btn-primary">Maped</a>
+        
     </div>
     <img id="imagem0" src="../img/porenquanto.webp" alt="">
   </section>
@@ -166,7 +162,7 @@
          naturais, diminuir o lixo nos aterros e combater a poluição. <br>
           Esses produtos são feitos de materiais que têm potencial de ser reaproveitados <br>
             após o descarte, se corretamente separados e enviados para reciclagem.</p>
-            <button type="button" class="btn btn-primary">Veja mais</button>
+            
     </div>
     <img id="imagem1" src="../img/pexels-karolina-grabowska-7692890 (1).jpg" alt="">
   </section>
