TRoca das fotos dos botões

--- a/html/inicio.html
+++ b/html/inicio.html
@@ -76,36 +76,38 @@
   </div>
 
 
-
+<br>
 <section>
   <div class="categorias">
     <div>
-    <img src="../img/categoria.webp" alt="">
+    <img src="../img/marcatexto.04.png" alt="" class="categorias-hover">
     <p>Marcadores</p>
   </div>
   <div>
-    <img src="../img/categoria2.jpeg" alt="">
+    <img src="../img/cadernos.04.png" alt="" class="categorias-hover">
     <p>Cadernos</p>
   </div>
   <div>
-    <img src="../img/categorias3.jpg" alt="">
+    <img src="../img/presentes.04.png" alt="" class="categorias-hover">
     <p>Presentes</p>
   </div>
   <div>
-    <img src="../img/categorias4.jpg" alt="">
+    <img src="../img/canecas.04.png" alt="" class="categorias-hover">
     <p>Copos </p>
   </div>
   <div>
-    <img src="../img/categorias5.jpg" alt="">
+    <img src="../img/decoracao.04.png" alt="" class="categorias-hover">
     <p>Decoração</p>
   </div>
   <div>
-    <img src="../img/categorias7.jpg" alt="">
+    <img src="../img/almofadas.04.png" alt="" class="categorias-hover">
     <p>Almofadas</p>
   </div>
   </div>
 </section>
  
+<br> <br>
+
 <div class="pagina">
   
   <div class="container">
