--- a/html/produtos.html
+++ b/html/produtos.html
@@ -53,11 +53,11 @@
 
 
     <div id="filtros">
-      <img src="../img/categoria.webp" alt="" class="filtro" data-categoria="Marcador"></img>
-      <img src="../img/pexels-punttim-53874.jpg" class="filtro" data-categoria="Caneta"></img>
-      <img src="../img/pexels-pixabay-247650.jpg" class="filtro" data-categoria="Caneca"></img>
-      <img src="../img/pexels-pixabay-220502.jpg" class="filtro" data-categoria="Lápis"></img>
-      <img src="../img/mochila.jpeg" class="filtro" data-categoria="Mochila"></img>
+      <img src="../img/marcatexto.03.png" alt="" class="filtro" data-categoria="Marcador"></img>
+      <img src="../img/canetas.03.png" class="filtro" data-categoria="Caneta"></img>
+      <img src="../img/caneca.01.jpg" class="filtro" data-categoria="Caneca"></img>
+      <img src="../img/lapis.03.png" class="filtro" data-categoria="Lápis"></img>
+      <img src="../img/mochila.03.png" class="filtro" data-categoria="Mochila"></img>
       <button onclick="filtroShow()" class="filtro" data-categoria="Todos">Todos</button>
     </div>
 
