--- a/html/inicio.html
+++ b/html/inicio.html
@@ -126,19 +126,19 @@
 
   <section class="grid">
     <div class="grid-item">
-      <img class="grid1" src="../img/caderno.webp" alt="2025">
+      <img class="grid1" src="../img/01.jpg" alt="2025">
     </div>
     <div class="grid-item">
-      <img class="grid2" src="../img/canetas.jpg" alt="Stabilo">
+      <img class="grid2" src="../img/02.jpg" alt="Stabilo">
     </div>
     <div class="grid-item">
-      <img class="grid2" src="../img/presente.jpg" alt="Stabilo">
+      <img class="grid2" src="../img/03.jpg" alt="Stabilo">
     </div>
     <div class="grid-item">
-      <img class="grid2" src="../img/mochila.jpeg" alt="Cadernos">
+      <img class="grid2" src="../img/04.jpg" alt="Cadernos">
     </div>
     <div class="grid-item">
-      <img class="grid2" src="../img/marcador.jpg" alt="Cadernos">
+      <img class="grid2" src="../img/05.jpg" alt="Cadernos">
     </div>
 
 </section>
