Resolvendo conflitos e integrando mudanças remotas

--- a/html/produtos.html
+++ b/html/produtos.html
@@ -51,8 +51,6 @@
 
 
   <div class="filter">
-
-
     <div id="filtros">
       <img src="../img/marcatexto.03.png" alt="" class="filtro" data-categoria="Marcador"></img>
       <img src="../img/canetas.03.png" class="filtro" data-categoria="Caneta"></img>
@@ -60,9 +58,17 @@
       <img src="../img/lapis.03.png" class="filtro" data-categoria="Lápis"></img>
       <img src="../img/mochila.03.png" class="filtro" data-categoria="Mochila"></img>
       <button onclick="filtroShow()" class="filtro" data-categoria="Todos">Todos</button>
+
     </div>
-
-
+  </div>
+  
+  <div id="modal" class="modal">
+    <div class="modal-content">
+      <span class="close" onclick="fecharModal()">aa</span>
+      <p>Coloque aqui qualquer conteúdo que desejar!</p>
+    </div>
+  </div>
+  
     <div class="pagina">
 
       <div class="container">
