--- a/html/sobre.html
+++ b/html/sobre.html
@@ -36,11 +36,25 @@
         </ul>
       </div>
       <ul class="nav-list">
-        <li><a class="link" href="../index.html">Inicio</a></li>
-        <li><a class="link" href="./sobre.html">Sobre</a></li>
-        <li><a class="link" href="./contato.html">Contato</a></li>
-        <li><a class="link" href="./produtos.html">Produtos</a></li>
+        <li><a class="link" href="inicio.html">Inicio</a></li>
+        <li><a class="link" href="sobre.html">Sobre</a></li>
+        <li><a class="link" href="contato.html">Contato</a></li>
+        <li><a class="link" href="produtos.html">Produtos</a></li>
       </ul>
+      <div class="menu-hamburguer">
+        <div class="hamburguer" onclick="toggleMenu()">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <ul class="navburguer">
+          <li><a class="link" href="inicio.html">Início</a></li>
+          <li><a class="link" href="sobre.html">Sobre</a></li>
+          <li><a class="link" href="contato.html">Contato</a></li>
+          <li><a class="link" href="produtos.html">Produtos</a></li>
+        </ul>
+      </div>
+      
     </nav>
 
     <header class="texto">
