--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 </head>
 <body>
   <div class="logo"><img src="./img/logojapuiba-removebg-preview.png" alt=""></div>
-
+<a href="https://www.japuibapapelaria.com.br/"></a>
   <script src="./js/index.js"></script>
 </body>
 </html>
