--- a/html/inicio.html
+++ b/html/inicio.html
@@ -144,16 +144,24 @@
       <img class="grid1" src="../img/01.1.jpg" alt="2025">
     </div>
     <div class="grid-item">
+      <div class="teste3">
       <img class="grid2" src="../img/01.5.jpg" alt="Stabilo">
     </div>
+    </div>
     <div class="grid-item">
+      <div class="teste3">
       <img class="grid2" src="../img/01.2.jpg" alt="Stabilo">
     </div>
-    <div class="grid-item">
-      <img class="grid2" src="../img/01.3.jpg" alt="Cadernos">
     </div>
     <div class="grid-item">
+      <div class="teste3">
+      <img class="grid2" src="../img/01.3.jpg" alt="Cadernos">
+    </div>
+    </div>
+    <div class="grid-item">
+      <div class="teste3">
       <img class="grid2" src="../img/01.04..jpg" alt="Cadernos">
+    </div>
     </div>
 
   </section>
@@ -213,11 +221,27 @@
       </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"></script>
-    <script src="../js/inicio.js"></script>
-    <script src="../js/contato.js"></script>
-</body>
 
-</html>
+      <script src="https://cdn.userway.org/widget.js" data-account="YF8JPMKGxK"></script>
+      <div vw class="enabled">
+          <div vw-access-button class="active"></div>
+          <div vw-plugin-wrapper>
+              <div class="vw-plugin-top-wrapper"></div>
+          </div>
+      </div>
+  
+      <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+      <script>
+        new window.VLibras.Widget('https://vlibras.gov.br/app');
+      </script>
+  
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+  
+      <script src="../js/inicio.js"></script>
+      <script src="../js/contato.js"></script>
+  
+  </body>
+  </html>
+  
