--- a/html/produtos.html
+++ b/html/produtos.html
@@ -62,25 +62,55 @@
     </nav>
   </header>
 
-  <div class="filter">
-    <div id="filtros">
+<div class="filter">
+  <div id="filtros">
+    <div class="total">
       <img src="../img/marcatexto.03.png" alt="" class="filtro" data-categoria="Marcador">
+      <p>Marcar textos</p>
+    </div>
+    <div>
       <img src="../img/canetas.03.png" class="filtro" data-categoria="Caneta">
+      <p>Caneta</p>
+    </div>
+    <div>
       <img src="../img/caneca.01.jpg" class="filtro" data-categoria="Caneca">
+      <p>Canecas</p>
+    </div>
+    <div>
       <img src="../img/lapis.03.png" class="filtro" data-categoria="Lápis">
+      <p>Lápis</p>
+    </div>
+    <div>
       <img src="../img/mochila.03.png" class="filtro" data-categoria="Mochila">
-      <button id="toggleButton" class="filtro" data-categoria="Todos">Todos</button>
-  
-      <div id="menuTodos" class="menu-hidden">
-        <p>Marcadores</p>
-        <p>Canetas</p>
-        <p>Canecas</p>
-        <p>Lápis</p>
-        <p>Mochilas</p>
+      <p>Mochilas</p>
+    </div>
+    <div id="menu-container">
+      <div>
+      <img src="../img/Imagem do WhatsApp de 2024-12-04 à(s) 21.42.15_fdf616b7.jpg" onclick="mostrarMenu()" class="todos">
+      <p>Todos</p>
+    </div>
+      <div id="menu" class="filtragemtotal" style="display: none;">
+        <ul>
+          <li><a href="#" class="filtro" data-categoria="Marcador">Marcadores</a></li>
+          <li><a href="#" class="filtro" data-categoria="Caneta">Canetas</a></li>
+          <li><a href="#" class="filtro" data-categoria="Mochila">Mochilas</a></li>
+          <li><a href="#" class="filtro" data-categoria="Lápis">Lapis</a></li>
+          <li><a href="#" class="filtro" data-categoria="Caneca">Caneca</a></li>
+          <li><a href="#" class="filtro" data-categoria="Copo">Copo</a></li>
+          <li><a href="#" class="filtro" data-categoria="Estojo">Estojo</a></li>
+          <li><a href="#" class="filtro" data-categoria="Giz">Giz</a></li>
+          <li><a href="#" class="filtro" data-categoria="Caderno">Caderno</a></li>
+          <li><a href="#" class="filtro" data-categoria="Lancheira">Lancheira</a></li>
+        </ul>
       </div>
     </div>
+    
   </div>
-  
+</div>
+
+     
+
+
     <div class="pagina">
 
       <div class="container">
@@ -124,12 +154,30 @@
         style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
   </footer>
+  <script src="https://cdn.userway.org/widget.js" data-account="YF8JPMKGxK"></script>
+  <div vw class="enabled">
+      <div vw-access-button class="active"></div>
+      <div vw-plugin-wrapper>
+          <div class="vw-plugin-top-wrapper"></div>
+      </div>
+  </div>
 
+  <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+  <script>
+    new window.VLibras.Widget('https://vlibras.gov.br/app');
+      </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
   <script src="../script.js"></script>
   <script src="../js/contato.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
+
 </body>
 
 </html>
