--- a/html/sobre.html
+++ b/html/sobre.html
@@ -125,19 +125,17 @@
   <footer>
     <div>
       <h1>Mapa do site</h1>
-      <a href="inicio.html">Inicio</a>
-      <a href="#home">Sobre</a>
+      <a href="#home">Inicio</a>
+      <a href="sobre.html">Sobre</a>
       <a href="produtos.html">Produtos</a>
       <a href="contato.html">Contato</a>
     </div>
 
     <div>
       <h1>Marcas</h1>
-      <a
-        href="https://www.tilibraexpress.com.br/?gad_source=1&gclid=EAIaIQobChMIjdGu7OSHigMV9lVIAB3LXAENEAAYASAAEgL2xfD_BwE">Tilibra</a>
+      <a href="https://www.tilibraexpress.com.br/?gad_source=1&gclid=EAIaIQobChMIjdGu7OSHigMV9lVIAB3LXAENEAAYASAAEgL2xfD_BwE">Tilibra</a>
       <a href="https://www.foroni.com.br/">Foroni</a>
-      <a href="https://www.lojafabercastell.com.br/?srsltid=AfmBOoogF__wWGtYidJ_tdDmtv6hpt0gi5M_2x3jYfV273j977hr1ZFU">Faber
-        Castell</a>
+      <a href="https://www.lojafabercastell.com.br/?srsltid=AfmBOoogF__wWGtYidJ_tdDmtv6hpt0gi5M_2x3jYfV273j977hr1ZFU">Faber Castell</a>
       <a href="https://atacadojandaia.com.br/vitrine">Jandaia</a>
     </div>
 
@@ -152,6 +150,24 @@
     </div>
   </footer>
 
+  <script src="https://cdn.userway.org/widget.js" data-account="YF8JPMKGxK"></script>
+  <div vw class="enabled">
+      <div vw-access-button class="active"></div>
+      <div vw-plugin-wrapper>
+          <div class="vw-plugin-top-wrapper"></div>
+      </div>
+  </div>
+
+  <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+  <script>
+    new window.VLibras.Widget('https://vlibras.gov.br/app');
+      </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
   <script src="../js/contato.js"></script>
 </body>
 
