Arrumando footer da pagina Sobre

--- a/html/produtos.html
+++ b/html/produtos.html
@@ -15,7 +15,7 @@
   <header>
     <nav class="nav">
       <div class="logo">
-        <img src="../img/logojapuiba-removebg-preview.png" alt="">
+        <a href="inicio.html" id="logo"><img src="../img/logojapuiba-removebg-preview.png" alt=""></a>
       </div>
       <div id="pesquisa">
         <div class="input-group">
