só falta melhorar a responsividade do inicio

--- a/html/contato.html
+++ b/html/contato.html
@@ -63,8 +63,9 @@
         <div class="formBx">
           <form action="" onsubmit="return false;">
             <h2>Contatos</h2>
-            <input type="text" name="" placeholder="Username" />
-            <input type="password" name="" placeholder="Password" />
+            <input type="text" name="" placeholder="Nome" />
+            <input type="email" name="" placeholder="Email" />
+            <textarea name="" id="" placeholder="Mensagem"></textarea>
             <input type="submit" name="" value="Login" />
             <p class="signup">
               Veja nossas informacoes
