--- a/html/produtos.html
+++ b/html/produtos.html
@@ -100,6 +100,7 @@
           <i id="fechar-menu" class="bi bi-x" onclick="fecharMenu()"></i>
         </div>
         <ul>
+          <li><a href="produtos.html" class="filtro">Todos</a></li>
           <li><a href="#" class="filtro" data-categoria="Marcador">Marcadores</a></li>
           <li><a href="#" class="filtro" data-categoria="Caneta">Canetas</a></li>
           <li><a href="#" class="filtro" data-categoria="Mochila">Mochilas</a></li>
