--- a/html/contato.html
+++ b/html/contato.html
@@ -63,10 +63,12 @@
         <div class="formBx">
           <form action="" onsubmit="return false;">
             <h2>Contatos</h2>
-            <input type="text" name="" placeholder="Nome" />
-            <input type="email" name="" placeholder="Email" />
-    
-            <input type="submit" name="" value="Login" />
+            <input type="text" placeholder="Name" style="width: 80%; padding: 10px; margin: 5px; border-radius: 5px; border: none; font-size: 16px;">
+            <br>
+            <input type="email" placeholder="Email" style="width: 80%; padding: 10px; margin: 5px; border-radius: 5px; border: none; font-size: 16px;">
+            <textarea placeholder="Mensagem" style="width: 80%; height: 100px; padding: 10px; margin: 5px; border-radius: 5px; border: none; font-size: 16px;"></textarea>
+            <input type="submit" name="" value="Enviar" />
+            
             <p class="signup">
               Veja nossas informacoes
               <a href="#" onclick="toggleForm();">Informações</a>
