--- a/html/contato.html
+++ b/html/contato.html
@@ -70,7 +70,7 @@
             <input type="submit" name="" value="Enviar" />
             
             <p class="signup">
-              Veja nossas informacoes
+              Veja nossas 
               <a href="#" onclick="toggleForm();">Informações</a>
             </p>
           </form>
@@ -109,8 +109,8 @@
                 </div>
             </div>
             <p class="signup">
-              Se precisar de alguma coisa só responder o
-              <a href="#" onclick="toggleForm();">Formulario</a>
+              Qualquer dúvida responda o
+              <a href="#" onclick="toggleForm();">Formulário</a>
             </p>
           </div>
           <div class="imgBx"><img src="../img/pexels-olia-danilevich-5088017.jpg" alt="" /></div>
