--- a/html/produtos.html
+++ b/html/produtos.html
@@ -66,11 +66,11 @@
   <div id="filtros">
     <div class="total">
       <img src="../img/marcatexto.03.png" alt="" class="filtro" data-categoria="Marcador">
-      <p>Marcar textos</p>
+      <p>Marca Texto</p>
     </div>
     <div>
       <img  src="../img/canetas.03.png" class="filtro" data-categoria="Caneta">
-      <p>Caneta</p>
+      <p>Canetas</p>
     </div>
     <div>
       <img src="../img/caneca.01.jpg" class="filtro" data-categoria="Caneca">
@@ -99,7 +99,7 @@
           <!-- Botão fechar -->
           <i id="fechar-menu" class="bi bi-x" onclick="fecharMenu()"></i>
         </div>
-        <ul>
+        <ul class="lista-filtro">
           <li><a href="produtos.html" class="filtro">Todos</a></li>
           <li><a href="#" class="filtro" data-categoria="Marcador">Marcadores</a></li>
           <li><a href="#" class="filtro" data-categoria="Caneta">Canetas</a></li>
@@ -138,7 +138,8 @@
 <!-- FOOTER -->
    
   <footer>
-    <div>
+    <div id="menu-footer">
+      <div id="mapadosite-footer">
       <h1>Mapa do site</h1>
       <a href="inicio.html">Inicio</a>
       <a href="sobre.html">Sobre</a>
@@ -146,13 +147,14 @@
       <a href="contato.html">Contato</a>
     </div>
 
-    <div>
+    <div id="marcas-footer">
       <h1>Marcas</h1>
       <a href="https://www.tilibraexpress.com.br/?gad_source=1&gclid=EAIaIQobChMIjdGu7OSHigMV9lVIAB3LXAENEAAYASAAEgL2xfD_BwE">Tilibra</a>
       <a href="https://www.foroni.com.br/">Foroni</a>
       <a href="https://www.lojafabercastell.com.br/?srsltid=AfmBOoogF__wWGtYidJ_tdDmtv6hpt0gi5M_2x3jYfV273j977hr1ZFU">Faber Castell</a>
       <a href="https://atacadojandaia.com.br/vitrine">Jandaia</a>
     </div>
+  </div>
 
     <button>
       <a href="#home"><img src="../img/chevron-up.svg" alt="Seta para cima"></a>
