--- a/html/sobre.html
+++ b/html/sobre.html
@@ -61,7 +61,7 @@
       <section>
         <h1>Papelaria Japuiba</h1>
         <p>A Papelaria Japuiba oferece uma variedade de <br> materiais escolares e de escritório,
-          incluindo<br>cadernos,fichários,canetas,agendas,pastas e <br>suprimentos para informática,com marcas
+          incluindo<br>cadernos, fichários, canetas, agendas, pastas e <br>suprimentos para informática, com marcas
           <br>renomadas como Tilibra e Faber-Castell.</p>
         <a href="#historia">Veja a nossa Historia</a>
       </section>
@@ -74,7 +74,7 @@
   <div class="azul-claro"></div>
 
   <section id="historia" class="historia">
-    <h1 id="titulo-h">Historico</h1>
+    <h1 id="titulo-h">Histórico</h1>
 
     <section class="historia-conteudo">
 
@@ -123,7 +123,8 @@
   <!-- FOOTER -->
 
   <footer>
-    <div>
+    <div id="menu-footer">
+      <div id="mapadosite-footer">
       <h1>Mapa do site</h1>
       <a href="#home">Inicio</a>
       <a href="sobre.html">Sobre</a>
@@ -138,6 +139,7 @@
       <a href="https://www.lojafabercastell.com.br/?srsltid=AfmBOoogF__wWGtYidJ_tdDmtv6hpt0gi5M_2x3jYfV273j977hr1ZFU">Faber Castell</a>
       <a href="https://atacadojandaia.com.br/vitrine">Jandaia</a>
     </div>
+  </div>
 
     <button>
       <a href="#home"><img src="../img/chevron-up.svg" alt="Seta para cima"></a>
