--- a/html/detalhes.html
+++ b/html/detalhes.html
@@ -69,20 +69,22 @@
 
     <!-- FOOTER -->
     <footer>
-      <div>
-        <h1>Mapa do site</h1>
-        <a href="inicio.html">Inicio</a>
-        <a href="sobre.html">Sobre</a>
-        <a href="produtos.html">Produtos</a>
-        <a href="contato.html">Contato</a>
-      </div>
+      <div id="menu-footer">
+        <div id="mapadosite-footer">
+          <h1>Mapa do site</h1>
+          <a href="#home">Inicio</a>
+          <a href="sobre.html">Sobre</a>
+          <a href="produtos.html">Produtos</a>
+          <a href="contato.html">Contato</a>
+        </div>
 
-      <div>
-        <h1>Marcas</h1>
-        <a href="https://www.tilibraexpress.com.br/?gad_source=1&gclid=EAIaIQobChMIjdGu7OSHigMV9lVIAB3LXAENEAAYASAAEgL2xfD_BwE">Tilibra</a>
-        <a href="https://www.foroni.com.br/">Foroni</a>
-        <a href="https://www.lojafabercastell.com.br/?srsltid=AfmBOoogF__wWGtYidJ_tdDmtv6hpt0gi5M_2x3jYfV273j977hr1ZFU">Faber Castell</a>
-        <a href="https://atacadojandaia.com.br/vitrine">Jandaia</a>
+        <div id="marcas-footer">
+          <h1>Marcas</h1>
+          <a href="https://www.tilibraexpress.com.br/?gad_source=1&gclid=EAIaIQobChMIjdGu7OSHigMV9lVIAB3LXAENEAAYASAAEgL2xfD_BwE">Tilibra</a>
+          <a href="https://www.foroni.com.br/">Foroni</a>
+          <a href="https://www.lojafabercastell.com.br/?srsltid=AfmBOoogF__wWGtYidJ_tdDmtv6hpt0gi5M_2x3jYfV273j977hr1ZFU">Faber Castell</a>
+          <a href="https://atacadojandaia.com.br/vitrine">Jandaia</a>
+        </div>
       </div>
 
       <button>
